# ducky

./: .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  README.md  ROADMAP.md  pyproject.toml  stub_patterns.txt
benchmarks/: _bench_fixtures.py  bench_duckdb.py  bench_ducky.py  run_vs_duckdb.py
examples/: progress_bar.py  titanic_jax.py  titanic_mlx.py
patches/: 0001-parser-cache-default-macro.patch
scripts/: asan-pytest.sh  bump-duckdb.sh  ft-udf-bench.py  init-duckdb.sh
src/cpp/: aggregate.cpp  aggregate.hpp  appender.cpp  appender.hpp  arrow_abi.h  arrow_scan.cpp  arrow_scan.hpp  chunk.cpp  chunk.hpp  connection.cpp  connection.hpp  database.hpp  ducky.cpp  ducky.hpp  function.cpp  function.hpp  prepared.hpp  result.cpp  result.hpp  table.cpp  table.hpp
src/ducky/: __init__.py  _aio.py  _conversions.py  _core.pyi  _dataset.py  _profile.py  _progress.py  _typing.py
tests/: test_aggregate_udf.py  test_appender.py  test_arrays.py  test_arrow.py  test_arrow_udf.py  test_async.py  test_basic.py  test_bind.py  test_chunk.py  test_dataset.py  test_prepared.py  test_profile.py  test_progress_bar.py  test_register_arrow.py  test_runtime.py  test_statement_cache.py  test_table_udf.py  test_udf.py
