[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "ducky"
description = "small and fast duckdb bindings"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Nicholas Junge", email = "nicho.junge@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    'typing_extensions >=4.12 ; python_version < "3.12"', # for typing.Unpack (PEP 692).
]
dynamic = ["version"]

[dependency-groups]
build = [
    "nanobind >=2.2",
    "ruff>=0.15.12",  # for CMake's post-build stub formatting step.
    "scikit-build-core >=0.10",
]
dev = [
    "jax>=0.10.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pytest>=8",
    "torch>=2.12.0",
]
typing = [
    "ty>=0.0.35",
]

[tool.uv]
# Build ducky against the project .venv so includes from Python packages
# (nanobind etc.) in compile_commands.json survive across rebuilds.
no-build-isolation-package = ["ducky"]
exclude-newer = "1 week"
# Require the "build" group by default, due to no build isolation.
default-groups = ["build"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/ducky"]
cmake.build-type = "Release"
logging.level = "INFO"
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "src/ducky/__init__.py"

[[tool.scikit-build.overrides]]
if.env.DUCKY_ASAN = "1"
build-dir = "build/asan"
cmake.build-type = "Debug"
cmake.args = [
    "-DCMAKE_CXX_FLAGS=-fsanitize=address -fno-omit-frame-pointer",
    "-DCMAKE_C_FLAGS=-fsanitize=address -fno-omit-frame-pointer",
    "-DCMAKE_SHARED_LINKER_FLAGS=-fsanitize=address",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
